fix: align footer content to margin

--- a/assets/scss/_footer.scss
+++ b/assets/scss/_footer.scss
@@ -1,10 +1,4 @@
 footer {
-
-
-
-
-
-
   & .footer-section-links {
 
     background: linear-gradient(264deg, #BB29BB, #5C06A8);
@@ -58,7 +52,7 @@ footer {
 
     .copyright {
       line-height: 1rem;
-      letter-spacing: 0.1rem;
+      letter-spacing: 0.15rem;
       p {
         margin-bottom: 5px;
       }
